--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body style="margin:0; min-height:100vh; display:flex; align-items:center; justify-content:center; font-family:system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; background:linear-gradient(135deg,#f5f7fa,#c3cfe2);">
     <main style="text-align:center; padding:32px; border-radius:16px; background:white; box-shadow:0 10px 30px rgba(0,0,0,.08);">
       <h1 style="margin:0 0 12px; font-size:48px; letter-spacing:.5px; color:#222;">Hello, World!</h1>
-      <p style="margin:0; font-size:16px; color:#555;">A super simple page with inline CSS.</p>
+      <p style="margin:0; font-size:16px; color:#555;">A super simple page with inline CSS   aduitya vedpatsf.</p>
     </main>
   </body>
 </html>
