--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             region: 'eu-north-1', // e.g., 'us-east-1'
             accessKeyId: 'AKIA36UVB2U4WUZF3XEI',
             secretAccessKey: '5aNSQtXH5MFa/XtOUcVXhrA/I0cT8RWebmHPhxjH',
-            bucketName: 'ccfa0'
+            bucketName: 'adityaccfa'
         };
 
             this.AWS_CONFIG = AWS_CONFIG;
