--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
          
   const AWS_CONFIG = {
             region: 'eu-north-1', // e.g., 'us-east-1'
-            accessKeyId: 'AKIA36UVB2U4WUZF3XEI',
-            secretAccessKey: '5aNSQtXH5MFa/XtOUcVXhrA/I0cT8RWebmHPhxjH',
+            accessKeyId: 'AKIA36UVB2U4VSIHU36S',
+            secretAccessKey: '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',
             bucketName: 'adityaccfa'
         };
 
