--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                 region: 'eu-north-1', 
                 accessKeyId: 'AKIA36UVB2U4VSIHU36S',
                 secretAccessKey: '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',
-                bucketName: 'adityaccfa'
+                bucketName: 'cc-fa-aditya'
             };
 
             this.AWS_CONFIG = AWS_CONFIG;
