--- a/index.html
+++ b/index.html
@@ -273,9 +273,9 @@
             // --- AWS S3 Configuration (UNCHANGED) ---
             const AWS_CONFIG = {
                 region: 'eu-north-1', 
-                accessKeyId: 'AKIA36UVB2U4VSIHU36S',
-                secretAccessKey: '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',
-                bucketName: 'cc-fa-aditya'
+                accessKeyId: 'AKIAQEY2DGQENLYQFCRU',
+                secretAccessKey: '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',
+                bucketName: 'cloudfa1'
             };
 
             this.AWS_CONFIG = AWS_CONFIG;
